# mechinterp-experiments

./: .gitignore  LICENSE  README.md  mechinterp-experiments.code-workspace
next_layer_sae/: .gitignore  e2e_demo.ipynb  pyproject.toml
next_layer_sae/next_layer_sae/: __init__.py  _autoreload.py  ops.py  replacement_model.py  sae.py  sae_data.py  tokenization.py  training.py  validation.py
tiny_stories_sae/: .gitignore  colab-requirements.txt  e2e_demo.ipynb  e2e_scratch.ipynb  feature_interaction_demo.ipynb  pyproject.toml
tiny_stories_sae/tiny_stories_sae/: _autoreload.py  activation_cache.py  activation_data.py  data_batch.py  decoder.py  encoder.py  end_to_end_training.py  kl_finetune_training.py  metrics.py  next_layer_finetuned_training.py  next_layer_training.py  ops.py  replacement_model.py  sae.py  sae_data.py  standard_training.py  tokenization.py  training.py  training_step.py  truncated_model.py  validation.py
tiny_stories_sae/tiny_stories_sae/training_step/: __init__.py  end_to_end.py  end_to_end_full.py  kl_finetune.py  next_layer.py  next_layer_finetuned.py  standard.py  training_step.py
transformers_sae/: README.md  bucket.sh  download_bucket.sh  e2e_demo.ipynb  explode_rre.py  exploding_rre_investigation.ipynb  fine_tune_gemma.py  pyproject.toml  run.sh  sae_bench.ipynb  sae_lens_scratch.ipynb  scratch.ipynb  setup_for_validations.py  train_gemma.py  train_gemma_with_interaction.py  train_tinystories.py  tune_gemma_thresholds.py  upload_bucket.sh  validate_gemma.py  validate_gemma_scope.py
transformers_sae/notebooks/: gemma_plots.ipynb
transformers_sae/scratch/: README.md  scratch.ipynb  set_up_deepeval.ipynb
transformers_sae/scripts/: benchmark_gemma.py  bucket.sh  fine_tune_gemma.py  fine_tune_gemma_with_interaction.py  train_gemma.py  train_gemma_standard.py  train_gemma_with_interaction.py  validate_gemma_scope.py
transformers_sae/transformers_sae/: _autoreload.py  activation_cache.py  activation_data.py  benchmark.py  data_batch.py  decoder.py  encoder.py  metrics.py  multiline_progress.py  ops.py  replacement_model.py  sae.py  sae_bench.py  sae_lens_wrapper.py  tokenization.py  training.py  truncated_model.py  validation.py
transformers_sae/transformers_sae/training_step/: __init__.py  end_to_end.py  end_to_end_full.py  kl_finetune.py  next_layer.py  next_layer_finetuned.py  standard.py  training_step.py
