[project]
name = "next-layer-sae"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "datasets>=4.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "zarr>=3.1.5",
]
version = "0.0.0"

[dependency-groups]
dev = [
    "jurigged>=0.6.1",
    "ruff>=0.14.10",
]
