[project]
name = "tiny-stories-sae"
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.8.0",
    "cloudpickle>=3.1.2",
    "datasets>=4.4.2",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "safetensors>=0.7.0",
    "scipy>=1.17.0",
    "torch>=2.10",
    "transformers>=4.57.3",
    "zarr>=3.1.5",
]
version = "0.0.0"

[dependency-groups]
dev = ["jurigged>=0.6.1", "line-profiler>=5.0.1", "ruff>=0.14.10"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
    { index = "pytorch-cu128", marker = "platform_system != 'Darwin'" },
]
